--- a/.github/workflows/Jobs.yaml
+++ b/.github/workflows/Jobs.yaml
@@ -67,6 +67,8 @@ jobs:
       - check_coding_style_include
     steps:
       - uses: actions/checkout@v3
+      - name: install irrlicht
+        run: sudo dnf install irrlicht irrlicht-devel -y
       - name: make verify
         run: make
       - name: make clean
@@ -115,5 +117,7 @@ jobs:
     timeout-minutes: 2
     steps:
       - uses: actions/checkout@v3
+      - name: install irrlicht
+        run: sudo dnf install irrlicht irrlicht-devel -y
       - name: make test
         run: make tests_run
