🙈 ignore python caches files

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,11 @@
 *.gch
 *.pch
 
+# Python caches elements
+
+/AI/src/__pycache__/
+/AI/Tests/__pycache__/
+
 # Compiled Dynamic libraries
 *.so
 *.dylib
