--- a/Network/CMakeLists.txt
+++ b/Network/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable(Zappy_Server
         src/Game/game_functions.c
         src/Server/update_players.c
         src/Game/game_tick.c
+        src/Server/complete_server.c
 )
 
 # Specify the C standard
